# DeepLens

./: .gitignore  0_hello_deeplens.ipynb  0_hello_deeplens.py  1_end2end_5lines.py  1_end2end_lens_design.py  2_autolens_rms.py  3_psf_net.py  4_tasklens_img_classi.py  5_pupil_field.ipynb  5_pupil_field.py  6_hybridlens_design.py  7_comp_photography.py  8_high_order_diff.py  8_multi_order_diffraction.py  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PR75_REVIEW_SUMMARY.md  README.md  compare_psf_render.py  debug.ipynb  environment.yml  my_end2end.py  prism_demo.py  pyproject.toml  requirements.txt  requirements_win.txt  setup.py  thinlens.json  transform_json.py  visualization_demo.py
.github/: FUNDING.yml
configs/: 1_end2end_5lines.yml  2_auto_lens_design.yml  4_tasklens.yml  7_comp_photography.yml  end2end_5lines.yml
deeplens/: README.md  __init__.py  basics.py  camera.py  dataset.py  diffraclens.py  geolens.py  geolens_eval.py  geolens_io.py  geolens_optim.py  geolens_utils.py  geolens_vis.py  hybridlens.py  lens.py  loss.py  monte_carlo.py  network_restoration.py  network_surrogate.py  optics.py  paraxiallens.py  psfnet.py  psfnetlens.py  render_psf.py  surfaces.py  utils.py  view_3d.py  view_3d_temp.py
docs/: citation.rst  code_of_conduct.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  tutorials.rst
lenses/: Nikon-z35-f1.8.json  cooke.json  cooke40_inferior.json  ef40mm_f2.8.json  ef50mm.json  readme.md
misc/: aatdff_bibtex.txt  deeplens_bibtex.txt  do_bibtex.txt  fluidiclens_bibtext.txt  (+1 more)
(+699 files in other folders)
