[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplens-core"
version = "1.2.0"
description = "DeepLens: differentiable optical lens simulator for end-to-end cameras."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Xinge Yang", email = "xinge.yang@kaust.edu.sa"}
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "torch",
    "torchvision",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-image>=0.20.0",
    "transformers>=4.30.0",
    "lpips>=0.1.4",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/singer-yang/DeepLens"
Repository = "https://github.com/singer-yang/DeepLens"
Documentation = "https://deeplens.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["."]
